--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
