helmet config and seo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Mecánica Express Chacón" />
+  <meta name="description"
+    content="Bienvenido a Mecánica Express Chacón, su solución para servicios automotrices de calidad." />
+  <meta name="keywords" content="mecánica, servicios automotrices, asistencia en carretera, mecánica rápida" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Mecanica Express Chacon</title>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="social network" />
+  <meta property="og:url" content="https://www.facebook.com/profile.php?id=100086288028221" />
+  <meta property="og:title" content="Mecánica Express Chacón" />
+  <meta property="og:description"
+    content="Bienvenido a Mecánica Express Chacón, su solución para servicios automotrices de calidad." />
+
+  <title>Mecánica Express Chacón</title>
 </head>
 
 <body>
