--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <meta name="title" content="Mecánica Express Chacón" />
+  <meta name="title" content="Mecánica Express Chacón | Servicios Automotrices de Calidad" />
   <meta name="description"
-    content="Bienvenido a Mecánica Express Chacón, su solución para servicios automotrices de calidad." />
-  <meta name="keywords" content="mecánica, servicios automotrices, asistencia en carretera, mecánica rápida" />
+    content="Bienvenido a Mecánica Express Chacón, donde ofrecemos servicios automotrices de alta calidad, asistencia en carretera y mecánica rápida." />
+  <meta name="keywords"
+    content="mecánica, servicios automotrices, asistencia en carretera, mecánica rápida, reparación de autos, taller mecánico" />
   <meta name="robots" content="index, follow" />
+  <meta name="author" content="Mecánica Express Chacón" />
+  <meta name="language" content="es" />
+  <meta name="revisit-after" content="7 days" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/PageLogo.png" />
@@ -19,13 +23,55 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="social network" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.facebook.com/profile.php?id=100086288028221" />
-  <meta property="og:title" content="Mecánica Express Chacón" />
+  <meta property="og:title" content="Mecánica Express Chacón | Servicios Automotrices" />
   <meta property="og:description"
-    content="Bienvenido a Mecánica Express Chacón, su solución para servicios automotrices de calidad." />
+    content="Servicios automotrices de calidad, asistencia en carretera y mecánica rápida en Mecánica Express Chacón." />
+  <meta property="og:image" content="https://mecanicaexpresschacon.com/assets/PageLogo-B9WUNV7H.png" />
+  <meta property="og:locale" content="es_ES" />
 
-  <title>Mecánica Express Chacón</title>
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://www.mecanicaexpresschacon.com" />
+  <meta name="twitter:title" content="Mecánica Express Chacón | Servicios Automotrices" />
+  <meta name="twitter:description"
+    content="Ofrecemos servicios automotrices de alta calidad en Mecánica Express Chacón." />
+  <meta name="twitter:image" content="https://mecanicaexpresschacon.com/assets/PageLogo-B9WUNV7H.png" />
+
+  <!-- Social Media Links -->
+  <meta property="og:site_name" content="Mecánica Express Chacón" />
+  <meta property="og:url" content="https://www.mecanicaexpresschacon.com" />
+  <meta property="og:see_also" content="https://www.facebook.com/profile.php?id=100086288028221" />
+  <meta property="og:see_also" content="https://www.instagram.com/servicio_automotriz_chacon/" />
+
+  <!-- Structured Data (Schema.org) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AutoRepair",
+      "name": "Mecánica Express Chacón",
+      "description": "Ofrecemos servicios automotrices de alta calidad, asistencia en carretera y mecánica rápida.",
+      "image": "https://mecanicaexpresschacon.com/assets/PageLogo-B9WUNV7H.png",
+      "url": "https://www.mecanicaexpresschacon.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Calle Falsa 123",
+        "addressLocality": "Ciudad",
+        "addressRegion": "Provincia",
+        "postalCode": "12345",
+        "addressCountry": "ES"
+      },
+      "telephone": "+34 123 456 789",
+      "priceRange": "$$",
+      "sameAs": [
+        "https://www.facebook.com/profile.php?id=100086288028221",
+        "https://www.instagram.com/servicio_automotriz_chacon/"
+      ]
+    }
+  </script>
+
+  <title>Mecánica Express Chacón | Servicios Automotrices de Calidad</title>
 </head>
 
 <body>
