--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
       ]
     }
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLNCCSKQW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-JLNCCSKQW5');
+  </script>
 
   <title>Mecánica Express Chacón | Servicios Automotrices de Calidad</title>
 </head>
