consents for page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 
     gtag('config', 'G-JLNCCSKQW5');
   </script>
+  <script type="text/javascript" data-cmp-ab="1"
+    src="https://cdn.consentmanager.net/delivery/autoblocking/a402f6fdc1f84.js"
+    data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16">
+    </script>
 
   <title>Mecánica Express Chacón | Servicios Automotrices de Calidad</title>
 </head>
