--- a/index.html
+++ b/index.html
@@ -70,32 +70,56 @@
       ]
     }
   </script>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JLNCCSKQW5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-JLNCCSKQW5');
   </script>
+
+  <!-- Consent Manager -->
   <script type="text/javascript" data-cmp-ab="1"
     src="https://cdn.consentmanager.net/delivery/autoblocking/a402f6fdc1f84.js"
     data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16">
-    </script>
+  </script>
 
   <!-- Facebook Pixel Code -->
   <script>
-    !function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '598783007728883'); fbq('track', 'PageView');</script>
-  <noscript>
-    <img height="1" width="1" src="https://www.facebook.com/tr?id=598783007728883&ev=PageView&noscript=1" />
-  </noscript><!-- End Facebook Pixel Code -->
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return;
+      n = f.fbq = function () {
+        n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n;
+      n.push = n;
+      n.loaded = !0;
+      n.version = '2.0';
+      n.queue = [];
+      t = b.createElement(e);
+      t.async = !0;
+      t.src = v;
+      s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '598783007728883');
+    fbq('track', 'PageView');
+  </script>
 
   <title>Mecánica Express Chacón | Servicios Automotrices de Calidad</title>
 </head>
 
 <body>
   <div id="root"></div>
+
+  <!-- Moved <noscript> to body to avoid parse5 error -->
+  <noscript>
+    <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=598783007728883&ev=PageView&noscript=1" />
+  </noscript>
+
   <script type="module" src="/src/main.tsx"></script>
   <script>
     AOS.init();
