--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       "url": "https://www.mecanicaexpresschacon.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Calle Falsa 123",
-        "addressLocality": "Ciudad",
-        "addressRegion": "Provincia",
-        "postalCode": "12345",
-        "addressCountry": "ES"
+        "streetAddress": "Colima Tibas",
+        "addressLocality": "Tibas",
+        "addressRegion": "San Jose",
+        "postalCode": "506",
+        "addressCountry": "CR"
       },
-      "telephone": "+34 123 456 789",
-      "priceRange": "$$",
+      "telephone": "+506 63422141",
+      "priceRange": "CRC",
       "sameAs": [
         "https://www.facebook.com/profile.php?id=100086288028221",
         "https://www.instagram.com/servicio_automotriz_chacon/"
