--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -103,8 +103,7 @@
     fbq('init', '1458985115484522');
     fbq('track', 'PageView');
   </script>
-  <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1458985115484522&ev=PageView&noscript=1" /></noscript>
+
   <!-- End Meta Pixel Code -->
 
   <title>Mecánica Express Chacón | Servicios Automotrices de Calidad</title>
@@ -118,8 +117,7 @@
   <!-- End Google Tag Manager (noscript) -->
   <!-- Moved <noscript> to body to avoid parse5 error -->
   <noscript>
-    <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=598783007728883&ev=PageView&noscript=1" />
+    <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1458985115484522&ev=PageView&noscript=1" />
   </noscript>
 
   <script type="module" src="/src/main.tsx"></script>
